WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229392
The simple text codepath does not handle unpaired surrogates
https://bugs.webkit.org/show_bug.cgi?id=229392
Summary
The simple text codepath does not handle unpaired surrogates
Myles C. Maxfield
Reported
2021-08-23 00:32:42 PDT
The simple text codepath does not handle unpaired surrogates
Attachments
Patch
(13.47 KB, patch)
2021-08-23 00:34 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(13.96 KB, patch)
2021-08-23 00:39 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(16.44 KB, patch)
2021-08-23 01:22 PDT
,
Myles C. Maxfield
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(16.45 KB, patch)
2021-08-23 01:27 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(23.66 KB, patch)
2021-08-27 01:05 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2021-08-23 00:34:26 PDT
Created
attachment 436156
[details]
Patch
Myles C. Maxfield
Comment 2
2021-08-23 00:39:00 PDT
Created
attachment 436157
[details]
Patch
Myles C. Maxfield
Comment 3
2021-08-23 00:49:44 PDT
Comment on
attachment 436156
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=436156&action=review
> Source/WebCore/platform/graphics/SurrogatePairAwareTextIterator.h:60 > bool consumeSlowCase(UChar32&, unsigned&);
This should be deleted
Myles C. Maxfield
Comment 4
2021-08-23 01:00:56 PDT
Comment on
attachment 436156
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=436156&action=review
> Source/WebCore/platform/graphics/SurrogatePairAwareTextIterator.h:22 > #ifndef SurrogatePairAwareTextIterator_h > #define SurrogatePairAwareTextIterator_h
I can probably do #pragma once too
Myles C. Maxfield
Comment 5
2021-08-23 01:06:40 PDT
It looks like there are some usages of SurrogatePairAwareTextIterator outside of the Cocoa ports.
Myles C. Maxfield
Comment 6
2021-08-23 01:22:53 PDT
Created
attachment 436161
[details]
Patch
Myles C. Maxfield
Comment 7
2021-08-23 01:27:00 PDT
Created
attachment 436162
[details]
Patch
Myles C. Maxfield
Comment 8
2021-08-27 01:05:23 PDT
Created
attachment 436611
[details]
Patch
EWS
Comment 9
2021-08-27 20:20:27 PDT
Committed
r281731
(
241073@main
): <
https://commits.webkit.org/241073@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 436611
[details]
.
Radar WebKit Bug Importer
Comment 10
2021-08-27 20:21:17 PDT
<
rdar://problem/82465705
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug